--- a/leetcode/leetcode.csproj
+++ b/leetcode/leetcode.csproj
@@ -6,5 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="common/" />
+  </ItemGroup>
 </Project>
 
